[package]
name = "sm-ext"
version = "0.1.0"
authors = ["Asher Baker <asherkin@limetech.io>"]
description = "Helpers for writing SourceMod Extensions in Rust"
edition = "2018"

[features]
default = []
abi_thiscall = ["sm-ext-derive/abi_thiscall"]

[dependencies]
libc = "0.2.66"
c_str_macro = "1.0.2"

[dependencies.sm-ext-derive]
version = "0.1.0"
path = "sm-ext-derive"

[workspace]

[[example]]
name = "basic"
crate-type = ["cdylib"]

[[example]]
name = "natives"
crate-type = ["cdylib"]

[[example]]
name = "forwards"
crate-type = ["cdylib"]

[[example]]
name = "handles"
crate-type = ["cdylib"]
