[package]
name = "sm-ext"
version = "0.3.0"
authors = ["Asher Baker <asherkin@limetech.io>"]
edition = "2018"
description = "Helpers for writing SourceMod Extensions in Rust"
repository = "https://github.com/asherkin/sm-ext-rs"
readme = "README.md"
keywords = ["sourcemod"]
categories = ["api-bindings"]
license = "GPL-3.0-or-later"

[features]
default = []
abi_thiscall = ["sm-ext-derive/abi_thiscall"]

[dependencies]
libc = "0.2.66"
c_str_macro = "1.0.2"

[dependencies.sm-ext-derive]
version = "0.3.0"
path = "sm-ext-derive"

[dev-dependencies]
futures = "0.3"
async-std = "1.4"

[workspace]

[[example]]
name = "basic"
crate-type = ["cdylib"]

[[example]]
name = "natives"
crate-type = ["cdylib"]

[[example]]
name = "forwards"
crate-type = ["cdylib"]

[[example]]
name = "handles"
crate-type = ["cdylib"]

[[example]]
name = "data"
crate-type = ["cdylib"]

[[example]]
name = "async"
crate-type = ["cdylib"]
