[package]
name = "sm-ext-derive"
version = "0.3.0"
authors = ["Asher Baker <asherkin@limetech.io>"]
edition = "2018"
workspace = ".."
description = "Procedural macro package for sm-ext helpers"
repository = "https://github.com/asherkin/sm-ext-rs"
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[features]
default = []
abi_thiscall = []

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
